--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ nav {
 footer {
     background-color: #333;
     color: #eee;
-    padding: 60px 40px 105px; /* MODIFIED: Increased bottom padding */
+    padding: 60px 40px 110px; /* MODIFIED: Increased bottom padding for the new pattern */
     position: relative;
     overflow: hidden;
 }
@@ -367,9 +367,9 @@ footer::after {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 30px; /* Adjusted height for the new pattern */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='90' height='30'%3E%3Cg fill='none' stroke='%23F27C38' stroke-width='2' stroke-linecap='round' opacity='0.75'%3E%3Cpath d='M5,25 C15,25 15,15 5,15 C15,15 15,5 5,5' /%3E%3Ccircle cx='20' cy='15' r='1.5' fill='%23F27C38' stroke='none' /%3E%3Cpath d='M35,5 C45,5 45,15 35,15 C45,15 45,25 35,25' /%3E%3Ccircle cx='50' cy='15' r='1.5' fill='%23F27C38' stroke='none' /%3E%3Cpath d='M65,5 L65,25 L75,15 Z' /%3E%3Cpath d='M85,10 L85,20' /%3E%3C/g%3E%3C/svg%3E");
-    background-size: 90px 30px; /* Adjusted size of the pattern tile */
+    height: 35px; /* Height of the new pattern */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='35'%3E%3Cg stroke='%23F27C38' stroke-width='2' stroke-linecap='round' fill='none' opacity='0.8'%3E%3Cpath d='M5 17.5 C15 5, 20 30, 30 17.5' /%3E%3Cpath d='M50 5 L42.5 17.5 L57.5 17.5 Z' /%3E%3Cpath d='M50 17.5 L50 30' /%3E%3Cpath d='M42.5 25 L50 30 L57.5 25' /%3E%3Cpath d='M95 17.5 C85 5, 80 30, 70 17.5' /%3E%3C/g%3E%3C/svg%3E");
+    background-size: 100px 35px; /* Size of the new pattern tile */
     background-repeat: repeat-x;
     pointer-events: none;
 }
